src/objects/Ship_To_Address__c.object
<CustomObject>
    <description>FIT Project</description>
    <fields>
        <fullName>Account_Group__c</fullName>
        <label>Account Group</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>SJM Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Ship_To_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City_State_Zip__c</fullName>
        <description>Used within the search results of the Ship to Address field for FIT mobile</description>
        <label>City State Zip</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Is_this_my_Ship_to_Address__c</fullName>
        <description>Indicates whether the current running user is the same value as the User field. Used to build the &quot;My Ship To Addresses&quot; list view.</description>
        <formula>IF( User__r.Id = $User.Id, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is this my Ship to Address?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name_Hyperlink__c</fullName>
        <description>Defaults to either the First Name + Last Name fields from the User table or the link to the Account, depending on if the User or Account field is populated, respectively. Used for displaying in the &quot;All Ship To Addresses&quot; list view.</description>
        <formula>IF(ISBLANK( User__c) , HYPERLINK(&quot;https://sjm--qa.cs17.my.salesforce.com/&quot; &amp; Account__r.Id , Account__r.Name , &apos;_self&apos;) , User__r.FirstName &amp;&apos; &apos;&amp; User__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_1__c</fullName>
        <label>Street 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <label>Street 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_3__c</fullName>
        <label>Street 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ship_To_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Ship To Address</label>
    <listViews>
        <fullName>All_Ship_to_Addresses</fullName>
        <columns>NAME</columns>
        <columns>Street_1__c</columns>
        <columns>Street_2__c</columns>
        <columns>City__c</columns>
        <columns>State_Province__c</columns>
        <columns>Zip_Postal_Code__c</columns>
        <columns>Location_Name_Hyperlink__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Ship to Addresses</label>
    </listViews>
    <listViews>
        <fullName>My_Ship_To_Addresses</fullName>
        <columns>NAME</columns>
        <columns>Street_1__c</columns>
        <columns>Street_2__c</columns>
        <columns>City__c</columns>
        <columns>State_Province__c</columns>
        <columns>Zip_Postal_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_this_my_Ship_to_Address__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>My Ship To Addresses</label>
    </listViews>
    <nameField>
        <label>SJM ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ship To Addresses</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>User_Or_Account_Required</fullName>
        <active>true</active>
        <description>A User or Account value must be entered in order to save</description>
        <errorConditionFormula>ISBLANK(Account__c ) &amp;&amp;
ISBLANK(User__c )</errorConditionFormula>
        <errorMessage>You must enter a User or Account value</errorMessage>
    </validationRules>
</CustomObject>